# actix-web-condo-plan-reporter-api

./: .env  .gitignore  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20210328080103_create_users_table.sql  20210328080115_create_projects_table.sql  20210328080131_create_floor_plans_table.sql  20210328080149_create_issues_table.sql  20210328080222_create_files_table.sql  20210329153707_create_overall_project_report_view.sql  20210329155044_create_overall_floor_plan_report_view.sql
scripts/: init_db.sh
src/: consts.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  new_file.rs  new_issue.rs  new_project.rs  project_name.rs
src/routes/: floor_plans.rs  issues.rs  mod.rs  projects.rs  report.rs
templates/: 404.html  index.html  layout.html
tests/: health_check.rs
