[package]
name = "actix_web_condo_plan_reporter_api"
version = "0.1.0"
authors = ["Aphimuk Yimsukpaitoon <luroman6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust_lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_web_condo_plan_reporter_api"

[dependencies]
actix-web = "4.0.0-beta.4"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
