[package]
name = "condo_plan_reporter_api"
version = "0.1.0"
authors = ["Aphimuk Yimsukpaitoon <luroman6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust_lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "condo_plan_reporter_api"

[dependencies]
actix-cors = { git = "https://github.com/actix/actix-extras.git" }
actix-multipart = "0.4.0-beta.3"
actix-web = "4.0.0-beta.4"
actix-files = "0.6.0-beta.3"
futures = "0.3"
wkhtmltopdf = "0.3.0"
sanitize-filename = "0.2"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
