[package]
name = "condo_plan_reporter_api"
version = "0.1.0"
authors = ["Aphimuk Yimsukpaitoon <luroman6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust_lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "condo_plan_reporter_api"

[dependencies]
actix-cors = { git = "https://github.com/actix/actix-extras" }
actix-files = "0.6.0-beta.3"
actix-multipart = "0.4.0-beta.3"
actix-web = "4.0.0-beta.4"
bytes = { version = "1.0.1", features = ["serde"] }
chrono = { version = "0.4.15", features = ["serde"] }
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
env_logger = "0.8.3"
futures = "0.3"
log = "0.4.14"
sanitize-filename = "0.2"
serde = "1.0.115"
serde_json = "1"
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tera = { version = "1.7.0", features = ["builtins"] }
unicode-segmentation = "1.7.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
validator = "0.12.0"
wkhtmltopdf = "0.3.0"

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
